RESOLVED FIXED229683
Fix double-tap-on-editable-content-for-selection-then-drag-* tests.
https://bugs.webkit.org/show_bug.cgi?id=229683
Summary Fix double-tap-on-editable-content-for-selection-then-drag-* tests.
Megan Gardner
Reported 2021-08-30 12:39:41 PDT
Fix double-tap-on-editable-content-for-selection-then-drag-* tests.
Attachments
Patch (11.31 KB, patch)
2021-08-30 13:16 PDT, Megan Gardner
no flags
Patch for landing (11.31 KB, patch)
2021-08-30 15:06 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2021-08-30 13:16:43 PDT
Megan Gardner
Comment 2 2021-08-30 13:18:21 PDT
Megan Gardner
Comment 3 2021-08-30 15:06:07 PDT
Created attachment 436815 [details] Patch for landing
EWS
Comment 4 2021-08-30 15:45:50 PDT
Committed r281781 (241118@main): <https://commits.webkit.org/241118@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436815 [details].
Note You need to log in before you can comment on or make changes to this bug.