Fix double-tap-on-editable-content-for-selection-then-drag-* tests. https://bugs.webkit.org/show_bug.cgi?id=229683 rdar://59571151

Reviewed by Wenson Hsieh.

Tools:

The swipe keyboard tutorial comes up on first launch. Set the defaults to prevent
that from happening and interfering with tests.

* WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::platformResetStateToConsistentValues):

LayoutTests:

Add delay to allow double-tap gesture to reset before the other gestures can be invoked.
Also update to use more functions from UIHelper, which is newer and more maintained.

* fast/events/touch/ios/double-tap-on-editable-content-for-selection-then-drag-down-to-change-selected-text.html:
* fast/events/touch/ios/double-tap-on-editable-content-for-selection-then-drag-left-to-change-selected-text.html:
* fast/events/touch/ios/double-tap-on-editable-content-for-selection-then-drag-right-to-change-selected-text.html:
* fast/events/touch/ios/double-tap-on-editable-content-for-selection-then-drag-up-to-change-selected-text.html:


Canonical link: https://commits.webkit.org/241118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281781 268f45cc-cd09-0410-ab3c-d52691b4dbfc